# sales_ai_agent_case_study

./: .env.example  .gitignore  CHALLENGE.md  EVALUATION_RESULTS.md  HARNESS_BENCHMARK_CONCLUSSION.md  README.md  pyproject.toml
Agent-UI/: README.md  pyproject.toml
Agent-UI/src/agent_ui/: __init__.py  app.py  main.py  store.py  world_diff.py
Agent-UI/tests/: test_api.py  test_evaluation_history.py  test_history_browser.py  test_viewer.py  test_world_diff.py
mock-agent/: .env.example  README.md  pyproject.toml
mock-agent/evaluation/: config.example.json  config.json  manifest.example.json
mock-agent/results/: sales.zoom_calendar_conflict.gpt-5.6-sol.configured-run.json
mock-agent/results/development/: sales.full_sales_cycle_orchestrator.gpt-5.6-sol.diagnostic.json
mock-agent/results/evaluation/: a596d592316e3fc98ff5fb79f351c8075a68f798809eba416c7a8f0cfef5453c_sales-chatgpt_proposal_customization_r001.json  a596d592316e3fc98ff5fb79f351c8075a68f798809eba416c7a8f0cfef5453c_sales-chatgpt_proposal_customization_r002.json  a596d592316e3fc98ff5fb79f351c8075a68f798809eba416c7a8f0cfef5453c_sales-chatgpt_proposal_customization_r003.json  a596d592316e3fc98ff5fb79f351c8075a68f798809eba416c7a8f0cfef5453c_sales-chatgpt_proposal_customization_r004.json  a596d592316e3fc98ff5fb79f351c8075a68f798809eba416c7a8f0cfef5453c_sales-chatgpt_proposal_customization_r005.json  a596d592316e3fc98ff5fb79f351c8075a68f798809eba416c7a8f0cfef5453c_sales-chatgpt_proposal_customization_r006.json  a596d592316e3fc98ff5fb79f351c8075a68f798809eba416c7a8f0cfef5453c_sales-chatgpt_proposal_customization_r007.json  a596d592316e3fc98ff5fb79f351c8075a68f798809eba416c7a8f0cfef5453c_sales-chatgpt_proposal_customization_r008.json  a596d592316e3fc98ff5fb79f351c8075a68f798809eba416c7a8f0cfef5453c_sales-chatgpt_proposal_customization_r009.json  a596d592316e3fc98ff5fb79f351c8075a68f798809eba416c7a8f0cfef5453c_sales-chatgpt_proposal_customization_r010.json  a596d592316e3fc98ff5fb79f351c8075a68f798809eba416c7a8f0cfef5453c_sales-contract_renewal_coordinator_r001.json  a596d592316e3fc98ff5fb79f351c8075a68f798809eba416c7a8f0cfef5453c_sales-contract_renewal_coordinator_r002.json  a596d592316e3fc98ff5fb79f351c8075a68f798809eba416c7a8f0cfef5453c_sales-contract_renewal_coordinator_r003.json  a596d592316e3fc98ff5fb79f351c8075a68f798809eba416c7a8f0cfef5453c_sales-contract_renewal_coordinator_r004.json  a596d592316e3fc98ff5fb79f351c8075a68f798809eba416c7a8f0cfef5453c_sales-contract_renewal_coordinator_r005.json  a596d592316e3fc98ff5fb79f351c8075a68f798809eba416c7a8f0cfef5453c_sales-contract_renewal_coordinator_r006.json  a596d592316e3fc98ff5fb79f351c8075a68f798809eba416c7a8f0cfef5453c_sales-contract_renewal_coordinator_r007.json  a596d592316e3fc98ff5fb79f351c8075a68f798809eba416c7a8f0cfef5453c_sales-contract_renewal_coordinator_r008.json  a596d592316e3fc98ff5fb79f351c8075a68f798809eba416c7a8f0cfef5453c_sales-contract_renewal_coordinator_r009.json  a596d592316e3fc98ff5fb79f351c8075a68f798809eba416c7a8f0cfef5453c_sales-contract_renewal_coordinator_r010.json  (+43 more)
mock-agent/results/runs/: d7d877b5-96a4-4e03-a70b-516659a4f460.json  (+2 more)
mock-agent/scripts/: migrate_run_artifacts.py
mock-agent/tests/: test_agent.py  test_artifacts.py  test_baseline.py  test_catalog.py  test_evaluation.py  test_model.py  test_plan_state.py  test_plan_state_runtime.py  test_planner_executor.py  test_runtime.py  test_runtime_support.py
(+535 files in other folders)
