[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sales-agent"
dynamic = ["version"]
description = "A framework-free plan-state Sales agent and offline evaluation harness"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.83,<1",
    "fastapi>=0.116,<1",
    "httpx>=0.27,<1",
    "openai>=2.45,<3",
    "pydantic>=2,<3",
    "python-dotenv>=1.2,<2",
    "rich>=13,<15",
    "uvicorn>=0.30,<1",
    "verifiers>=0.1.12.dev2,<1",
]

[dependency-groups]
dev = [
    "playwright>=1.61,<2",
    "pytest>=9,<10",
    "pytest-asyncio>=1.3,<2",
    "ruff>=0.14,<1",
    "ty>=0.0.8,<1",
]

[project.scripts]
sales-agent = "sales_agent.cli:main"

[tool.hatch.version]
path = "src/sales_agent/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/sales_agent", "vendor/automationbench/automationbench"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ty.rules]
unresolved-import = "warn"
unknown-argument = "warn"
