[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-ui"
version = "0.1.0"
description = "Local evaluator UI for AutomationBench agent sessions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116,<1",
    "mock-agent",
    "uvicorn>=0.30,<1",
]

[dependency-groups]
dev = [
    "httpx>=0.27,<1",
    "playwright>=1.61.0",
    "pytest>=9,<10",
]

[project.scripts]
agent-ui = "agent_ui.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_ui"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
automation-bench = { path = "../AutomationBench" }
mock-agent = { path = "../mock-agent", editable = true }
