[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mock-agent"
version = "0.1.0"
description = "A minimal AutomationBench agent with a framework-neutral evaluator runtime"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "automation-bench",
    "openai>=2.45,<3",
    "python-dotenv>=1.2,<2",
]

[dependency-groups]
dev = ["pytest>=9,<10"]

[project.scripts]
mock-agent = "mock_agent.main:main"
mock-agent-eval = "mock_agent.evaluation:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mock_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
automation-bench = { path = "../AutomationBench" }
